force-app/main/default/objects/TimeSheet/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The timesheet assign to the project</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Time Sheets</relationshipLabel>
    <relationshipName>Time_Sheets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>