force-app/main/default/objects/TimeSheet/fields/ProjectApro__c.field-meta.xml
<CustomField>
    <fullName>ProjectApro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Time Sheets (Project)</relationshipLabel>
    <relationshipName>Time_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>