force-app/main/default/objects/TimeSheet/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Sheets</relationshipLabel>
    <relationshipName>Time_Sheets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>